--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -90,3 +90,36 @@
   color: #212529;
   text-align: left;
 }
+
+.dropbtn 
+{
+  background-color: #1a5a96;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown 
+{
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content 
+{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content :hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content 
+{
+  display: block;
+}
