--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -22,10 +22,11 @@
 
 .filter-container{
   border: 1px solid #555;
-  border-radius: 5px;
-  width: 100%;
+  border-radius: 3px;
+  /* width: 100%; */
   padding: 0;
-  margin: 0 5px 10px 5px;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   font-size: 13px;
 }
 
@@ -95,31 +96,45 @@
 {
   background-color: #1a5a96;
   color: white;
-  padding: 16px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   font-size: 16px;
+  width: 100%;
   border: none;
   cursor: pointer;
+  //float: right;
 }
 
 .dropdown 
 {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  width: 50%;
+  /* margin-left: 43%; */
+  right: 0.9rem;
+  top: 0.5rem;
 }
 
 .dropdown-content 
 {
   display: none;
-  position: absolute;
+  // position: absolute;
+  position: relative;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-
+.list-container {
+  margin-top: 3rem;
+}
 .dropdown-content :hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content 
 {
   display: block;
 }
+.task-outer-container{
+  max-width: 100vw;
+  background-color: white;
+}
+
