--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -1,26 +1,20 @@
-.camunda-tasklist-main {
-  margin-top: 2px;
-  min-height: 85vh;
-  padding-bottom: 1.5rem;
-  font-size: 16px;
-  font-family: Nunito Sans, SemiBold;
-  background-color: white !important;
-}
-
-.bg-default {
+.task-outer-container{
+  max-width: 100vw;
+  background-color: white;
+  .bg-default {
   background-color: #38598a !important;
   border: #38598a !important;
   color: white !important;
 }
 
-.not-selected{
+.cft-not-selected{
   border: 3px solid #b3b3b3;
   padding: 10px;
   color: #b3b3b3;
   width: 100%;
 }
 
-.filter-container{
+.cft-filter-container{
   border: 1px solid #555;
   border-radius: 3px;
   /* width: 100%; */
@@ -30,24 +24,24 @@
   font-size: 13px;
 }
 
-.filter{
+.cft-filter{
   width: 85%;
   margin: 5px;
   border: none;
   font-style: italic;
 }
-.filter:focus{
+.cft-filter:focus{
   outline: none;
 }
 
-.task-row-2 {
+.cft-task-row-2 {
   font-size: 15px;
 }
-.task-row-3 {
+.cft-task-row-3 {
   font-size: 11px;
 }
 
-.service-task-list {
+.cft-service-task-list {
   box-shadow: 0 0 10px 5px #D0D0D0;
   clip-path: inset(0px -15px 0px 0px);
   padding: 0rem 1.25rem !important;
@@ -58,7 +52,7 @@
   border-right: 2px solid #D0D0D0;
 } 
 
-.service-task-details {
+.cft-service-task-details {
   min-height: 80vh;
   max-height: 80vh;
   overflow-y: auto;
@@ -74,11 +68,11 @@
   font-weight: 400;
 }
 
-.selected {
+.cft-selected {
   border-left: 2px solid #003366 !important;
 }
 
-.actionable {
+.cft-actionable {
   color: #1a5a96;
   background-color: transparent;
   cursor: pointer;
@@ -87,12 +81,12 @@
   font-weight: bold;
 }
 
-.select-task {
+.cft-select-task {
   color: #212529;
   text-align: left;
 }
 
-.dropbtn 
+.cft-filter-dropbtn 
 {
   background-color: #1a5a96;
   color: white;
@@ -105,7 +99,7 @@
   //float: right;
 }
 
-.dropdown 
+.cft-filter-dropdown 
 {
   position: absolute;
   width: 50%;
@@ -114,7 +108,7 @@
   top: 0.5rem;
 }
 
-.dropdown-content 
+.cft-filter-dropdown-content 
 {
   display: none;
   // position: absolute;
@@ -124,17 +118,14 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-.list-container {
+.cft-list-container {
   margin-top: 3rem;
 }
-.dropdown-content :hover {background-color: #f1f1f1}
+.cft-filter-dropdown-content :hover {background-color: #f1f1f1}
 
-.dropdown:hover .dropdown-content 
+.cft-filter-dropdown:hover .cft-filter-dropdown-content 
 {
   display: block;
 }
-.task-outer-container{
-  max-width: 100vw;
-  background-color: white;
 }
 
