--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -1,140 +1,132 @@
-.camunda-tasklist-main {
-  margin-top: 2px;
-  min-height: 85vh;
-  padding-bottom: 1.5rem;
-  font-size: 16px;
-  font-family: Nunito Sans, SemiBold;
-  background-color: white !important;
-}
-
-.bg-default {
-  background-color: #38598a !important;
-  border: #38598a !important;
-  color: white !important;
-}
-
-.not-selected{
-  border: 3px solid #b3b3b3;
-  padding: 10px;
-  color: #b3b3b3;
-  width: 100%;
-}
-
-.filter-container{
-  border: 1px solid #555;
-  border-radius: 3px;
-  /* width: 100%; */
-  padding: 0;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  font-size: 13px;
-}
-
-.filter{
-  width: 85%;
-  margin: 5px;
-  border: none;
-  font-style: italic;
-}
-.filter:focus{
-  outline: none;
-}
-
-.task-row-2 {
-  font-size: 15px;
-}
-.task-row-3 {
-  font-size: 11px;
-}
-
-.service-task-list {
-  box-shadow: 0 0 10px 5px #D0D0D0;
-  clip-path: inset(0px -15px 0px 0px);
-  padding: 0rem 1.25rem !important;
-  border-top: 1px solid #ced4da !important;
-  max-height: 80vh;
-  overflow-y: auto;
-  padding-right: 25px;
-  border-right: 2px solid #D0D0D0;
-} 
-
-.service-task-details {
-  min-height: 80vh;
-  max-height: 80vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.task-header {
-  font-size: 30px;
-  font-weight: 600;
-}
-.task-name {
-  font-size: 20px;
-  font-weight: 400;
-}
-
-.selected {
-  border-left: 2px solid #003366 !important;
-}
-
-.actionable {
-  color: #1a5a96;
-  background-color: transparent;
-  cursor: pointer;
-  margin: 10px 0;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.select-task {
-  color: #212529;
-  text-align: left;
-}
-
-.dropbtn 
-{
-  background-color: #1a5a96;
-  color: white;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  font-size: 16px;
-  width: 100%;
-  border: none;
-  cursor: pointer;
-  //float: right;
-}
-
-.dropdown 
-{
-  position: absolute;
-  width: 50%;
-  /* margin-left: 43%; */
-  right: 0.9rem;
-  top: 0.5rem;
-}
-
-.dropdown-content 
-{
-  display: none;
-  // position: absolute;
-  position: relative;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-.list-container {
-  margin-top: 3rem;
-}
-.dropdown-content :hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content 
-{
-  display: block;
-}
 .task-outer-container{
   max-width: 100vw;
   background-color: white;
+  
+  .bg-default {
+    background-color: #38598a !important;
+    border: #38598a !important;
+    color: white !important;
+  }
+
+  .cft-not-selected{
+    border: 3px solid #b3b3b3;
+    padding: 10px;
+    color: #b3b3b3;
+    width: 100%;
+  }
+
+  .cft-filter-container{
+    border: 1px solid #555;
+    border-radius: 3px;
+    /* width: 100%; */
+    padding: 0;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 13px;
+  }
+
+  .cft-filter{
+    width: 85%;
+    margin: 5px;
+    border: none;
+    font-style: italic;
+  }
+  .cft-filter:focus{
+    outline: none;
+  }
+
+  .cft-task-row-2 {
+    font-size: 15px;
+  }
+  .cft-task-row-3 {
+    font-size: 11px;
+  }
+
+  .cft-service-task-list {
+    box-shadow: 0 0 10px 5px #D0D0D0;
+    clip-path: inset(0px -15px 0px 0px);
+    padding: 0rem 1.25rem !important;
+    border-top: 1px solid #ced4da !important;
+    max-height: 80vh;
+    overflow-y: auto;
+    padding-right: 25px;
+    border-right: 2px solid #D0D0D0;
+  } 
+
+  .cft-service-task-details {
+    min-height: 80vh;
+    max-height: 80vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .task-header {
+    font-size: 30px;
+    font-weight: 600;
+  }
+  .task-name {
+    font-size: 20px;
+    font-weight: 400;
+  }
+
+  .cft-selected {
+    border-left: 2px solid #003366 !important;
+  }
+
+  .cft-actionable {
+    color: #1a5a96;
+    background-color: transparent;
+    cursor: pointer;
+    margin: 10px 0;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  .cft-select-task {
+    color: #212529;
+    text-align: left;
+  }
+
+  .cft-filter-dropbtn 
+  {
+    background-color: #1a5a96;
+    color: white;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 16px;
+    width: 20%;
+    border: none;
+    cursor: pointer;
+    //float: right;
+  }
+
+  .cft-filter-dropdown 
+  {
+    position: absolute;
+    width: 50%;
+    /* margin-left: 43%; */
+    right: 0.9rem;
+    top: 0.5rem;
+  }
+
+  .cft-filter-dropdown-content 
+  {
+    display: none;
+    // position: absolute;
+    position: relative;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+  }
+  .cft-list-container {
+    margin-top: 3rem;
+  }
+  .cft-filter-dropdown-content :hover {background-color: #f1f1f1}
+
+  .cft-filter-dropdown:hover .cft-filter-dropdown-content 
+  {
+    display: block;
+  }
 }
 
