--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -91,29 +91,27 @@
   {
     background-color: #1a5a96;
     color: white;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    font-size: 16px;
-    width: 20%;
+    // padding-top: 0.5rem;
+    // padding-bottom: 0.5rem;
+    font-size: 20px;
+    // width: 20%;
     border: none;
     cursor: pointer;
+    padding: 5px 9px;
     //float: right;
   }
 
   .cft-filter-dropdown 
   {
-    position: absolute;
-    width: 50%;
-    /* margin-left: 43%; */
-    right: 0.9rem;
-    top: 0.5rem;
+    position: relative;
+
   }
 
   .cft-filter-dropdown-content 
   {
     display: none;
-    // position: absolute;
-    position: relative;
+    position: absolute;
+    // position: relative;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -141,6 +139,10 @@
     margin-bottom: 3px;
     margin-top: 15px;
 
+  }
+  .cft-filter-sort{
+    display: flex;
+    justify-content: space-between;
   }
 
 }
