addded pagination to the task list

--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -47,7 +47,7 @@
     clip-path: inset(0px -15px 0px 0px);
     padding: 0rem 1.25rem !important;
     border-top: 1px solid #ced4da !important;
-    max-height: 80vh;
+   // max-height: 80vh;
     overflow-y: auto;
     padding-right: 25px;
     border-right: 2px solid #D0D0D0;
