--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -156,12 +156,48 @@
     margin-top: 15px;
 }
 
+  #cftf-dpdown-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .cftf-dpdown-box {
+    width: 50%;
+    margin-top: 5px;
+  }
+  .cft-dpdown-inner-container{
+    display: flex;
+  }
+  .cft-selection-box  {
+    width: 60%;
+      margin-left: 4px;
+  }
+  @media(max-width: 300px) {
+    .cftf-dpdown-box {
+       width: 100%;
+     }
+  }
+
+  .tab-content {
+    height:100%;
+  }
+  
+  .vue-bpmn-diagram-container {
+    height: 100%;
+    width: 100%;
+  }
+
 }
 
-.cftf-taskhead{
-  font-weight: bold;
-  font-size: 30px;
-  margin-left: 10px;
-  display: flex;
+.cftf-form-conatiner{
+  background-color: white;
+  .cftf-taskhead{
+    font-weight: bold;
+    font-size: 30px;
+    margin-left: 10px;
+    display: flex;
+  }
+  .cftf-table-align{
+    text-align: left;
+  }
 }
-
