--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -1,6 +1,9 @@
 .task-outer-container{
   max-width: 100vw;
   background-color: white;
+  text-align: left;
+  font-size: 16px;
+  font-family: Nunito Sans, SemiBold;
   
   .bg-default {
     background-color: #38598a !important;
@@ -18,7 +21,7 @@
   .cft-filter-container{
     border: 1px solid #555;
     border-radius: 3px;
-    /* width: 100%; */
+    width: 70%;
     padding: 0;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
@@ -26,10 +29,14 @@
   }
 
   .cft-filter{
-    width: 85%;
+    width: 70%;
     margin: 5px;
     border: none;
     font-style: italic;
+  }
+
+  .cft-filter-search{
+    width: 100%;
   }
   .cft-filter:focus{
     outline: none;
@@ -63,10 +70,12 @@
   .task-header {
     font-size: 30px;
     font-weight: 600;
+    color: #212529;
   }
   .task-name {
     font-size: 20px;
     font-weight: 400;
+    color: #212529;
   }
 
   .cft-selected {
@@ -105,6 +114,17 @@
   {
     position: relative;
 
+  }
+
+  .cft-sort-items {
+    border: 1px solid #949494;
+    border-radius: 3%;
+    position: absolute;
+    background-color: #fff;
+    background-clip: padding-box;
+    z-index: 5;
+    padding: 5px;
+    width: 13rem;
   }
 
   .cft-filter-dropdown-content 
@@ -156,12 +176,80 @@
     margin-top: 15px;
 }
 
+  #cftf-dpdown-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: calc(6px + 2px) 15px calc(6px - 2px) 15px;
+    box-shadow: 0 2px 6px -4px #555;
+    margin-bottom: 0.5rem;
+    background-color: #fafafa;
+  }
+  
+  .cftf-dpdown-box {
+    margin-top: 5px;
+  }
+  .cft-dpdown-inner-container{
+    display: flex;
+  }
+  .cft-selection-box  {
+    width: 60%;
+      margin-left: 4px;
+  }
+  @media(max-width: 300px) {
+    .cftf-dpdown-box {
+       width: 100%;
+     }
+  }
+
+  .tab-content {
+    height:100%;
+  }
+  
+  .vue-bpmn-diagram-container {
+    height: 100%;
+    width: 100%;
+  }
+
+  .cftf-exit-button {
+    padding-right: 3px;
+    font-weight: 700 !important;
+    cursor: pointer;
+    color: #212529;
+  }
+
+  .cftf-span-element {
+    cursor: pointer;
+    margin-right: 0.25rem;
+  }
+  
+  .cftf-add-sorting {
+    padding-top: 5px;
+    margin-top: 5px;
+  }
+
+  .cftf-arrow {
+    font-size: 1.3333em;
+    line-height: 0.75em;
+    display: inline-block;
+    font-weight: 700  !important;
+    color: #212529;
+  }
+
+  .cft-sort-element {
+    cursor: pointer;
+  }
+
 }
 
-.cftf-taskhead{
-  font-weight: bold;
-  font-size: 30px;
-  margin-left: 10px;
-  display: flex;
+.cftf-form-conatiner{
+  background-color: white;
+  .cftf-taskhead{
+    font-weight: bold;
+    font-size: 30px;
+    margin-left: 10px;
+    display: flex;
+  }
+  .cftf-table-align{
+    text-align: left;
+  }
 }
-
