--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -109,11 +109,14 @@
     padding: 5px 9px;
     //float: right;
   }
+  .cft-input-filter{
+    display: flex;
+    justify-content: space-between;
+  }
 
   .cft-filter-dropdown 
   {
     position: relative;
-
   }
 
   .cft-sort-items {
@@ -133,7 +136,7 @@
     position: absolute;
     // position: relative;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 2;
   }
@@ -237,6 +240,10 @@
 
   .cft-sort-element {
     cursor: pointer;
+  }
+
+  p{
+    white-space: normal;
   }
 
 }
