--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -239,6 +239,7 @@
   }
 
   .cftf-arrow {
+    padding-top: 5px;
     line-height: 0.75em;
     display: inline-block;
     font-weight: 700  !important;
