border style changes

--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -77,6 +77,10 @@
   }
 
   .cft-selected {
+    border-left: 5px solid #003366 !important;
+  }
+
+  .cft-filter-selected {
     border-left: 2px solid #003366 !important;
   }
 
