formio-list forms and cosmetic updates (#22)
* add tasklist APIs and follow up date

* display group details in button

* update css styles

* update css to fix overlab navbar z-index and store props in local storage

* add UserDetails in localstorage and fix any error

* Implement sorting feature functionality & decode JWT tokens

* update group apis and remove conditional statements to check candidates

* add sort desc optional list and update styles

* set directional arrows for sorting

* update group Modal cosmetics

* update cosmetics - select button, dates

* update function order

* update intendation to two spaces

* update utils file

* formSubmit Functionality implement for Vue tasklist

* update cosmetics - select button, dates

* update function order

* update intendation to two spaces

* update utils file

* formSubmit Functionality implement for Vue tasklist

* update task overlay - make it lighter

* basic FormList to display the available forms

* list the Forms with Pagination

* add list forms API

* convert 4 space indentation to 2 space

* add new utils for sorting

* simple sorting approach with minor refactoring of codebase

* use bootstrap icons

* update tasklist with bootstrap icons & fix packages

* fix unauthorised user Token issue

* remove task-sorting import

* addded pagination to the task list

* pagination for task completed.

* add task Sorting Options component

* update sorting tasklist functionality

* get Process diagram xml api

* tasklist changes

* fix formioUser roles issue

* task diagaram

* update fix

* install font-awesome and semantic Ui

* fix Formio form style issues

* Fix sorting feature and form style issues

* install vue-bpmn and bpmn-js

* update

* initial layout

* style changes

* fix styles

* border style changes

* add sortlist component

* set UserDetails JSONToken and fix formlist Component bugs

Co-a

--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -35,9 +35,6 @@
     font-style: italic;
   }
 
-  .cft-filter-search{
-    width: 100%;
-  }
   .cft-filter:focus{
     outline: none;
   }
@@ -71,6 +68,7 @@
     font-size: 30px;
     font-weight: 600;
     color: #212529;
+    padding-top: 5px;
   }
   .task-name {
     font-size: 20px;
@@ -79,6 +77,10 @@
   }
 
   .cft-selected {
+    border-left: 5px solid #003366 !important;
+  }
+
+  .cft-filter-selected {
     border-left: 2px solid #003366 !important;
   }
 
@@ -228,10 +230,12 @@
   .cftf-add-sorting {
     padding-top: 5px;
     margin-top: 5px;
+    position: relative;
+    float: left;
   }
 
   .cftf-arrow {
-    font-size: 1.3333em;
+    padding-top: 5px;
     line-height: 0.75em;
     display: inline-block;
     font-weight: 700  !important;
@@ -244,6 +248,13 @@
 
   p{
     white-space: normal;
+  }
+
+  .cft-form-title{
+    cursor: pointer;
+    color: #4d61fc;
+    border-bottom: 1px solid #4d61fc;
+    background-color: transparent;
   }
 
 }
