update color and add back button for Form modal element

--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -281,3 +281,10 @@
     text-align: left;
   }
 }
+
+.cft-form-list-paginate{
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+  padding: 0px;
+}
