--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -267,6 +267,12 @@
     margin: 0;
   }
 
+  .created-details{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
 }
 
 .cftf-form-conatiner{
