toggle search item feature

--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -155,6 +155,16 @@
     border-left: 2px solid #c44023 !important;
   }
 
+  .cft-search-criteria {
+    text-align: left;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+  }
+
+  .cft-search-item-criteria {
+    font-size: 16px;
+  }
   // .cft-search-item{
   //   font-size: medium;
   //   text-align: left;
