--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -139,7 +139,6 @@
     border-radius: 3%;
     position: absolute;
     background-color: #fff;
-    background-clip: padding-box;
     z-index: 10;
     width: 15rem;
     font-size: medium;
@@ -147,7 +146,6 @@
     cursor: pointer;
     color: #333;
     font-weight: 400;
-    padding: 2px 9px;
     min-width: 250px;
   }
 
@@ -173,6 +171,13 @@
   //   font-weight: 400;
   //   padding: 2px 9px;
   // }
+
+  .cftf-search-item-box {
+    margin-top: 5px;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #0b2d5f;;
+  }
 
   .cft-filter-dropdown-content 
   {
