create UserList API

--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -99,6 +99,11 @@
     text-align: left;
   }
 
+  .cft-task-assignee {
+    font-weight: 500;
+    font-size: 16px;
+  }
+
   .cft-filter-dropbtn 
   {
     background-color: #1a5a96;
