--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -62,6 +62,7 @@
     max-height: 80vh;
     overflow-y: auto;
     overflow-x: hidden;
+    height: 100%;
   }
 
   .task-header {
@@ -89,13 +90,17 @@
     background-color: transparent;
     cursor: pointer;
     margin: 10px 0;
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 16px;
   }
 
   .cft-select-task {
     color: #212529;
     text-align: left;
+  }
+
+  .cft-task-assignee {
+    font-weight: 500;
+    font-size: 16px;
   }
 
   .cft-filter-dropbtn 
@@ -130,6 +135,52 @@
     z-index: 5;
     padding: 5px;
     width: 13rem;
+  }
+
+  .cft-search-items {
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border: 1px solid #949494;
+    border-radius: 3%;
+    position: absolute;
+    background-color: #fff;
+    z-index: 10;
+    width: 15rem;
+    font-size: medium;
+    text-align: left;
+    cursor: pointer;
+    color: #333;
+    font-weight: 400;
+    min-width: 250px;
+  }
+
+  .cft-search-item-selected {
+    border-left: 2px solid #c44023 !important;
+  }
+
+  .cft-search-criteria {
+    text-align: left;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+  }
+
+  .cft-search-item-criteria {
+    font-size: 16px;
+  }
+  // .cft-search-item{
+  //   font-size: medium;
+  //   text-align: left;
+  //   cursor: pointer;
+  //   color: #333;
+  //   font-weight: 400;
+  //   padding: 2px 9px;
+  // }
+
+  .cftf-search-item-box {
+    margin-top: 5px;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #0b2d5f;;
   }
 
   .cft-filter-dropdown-content 
@@ -174,12 +225,12 @@
   }
   [aria-busy=true] {
     cursor: unset !important;
-}
-.cft-paginate{
-    display: flex;
-    justify-content: center;
-    margin-top: 15px;
-}
+  }
+  .cft-paginate{
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+  }
 
   #cftf-dpdown-container {
     display: flex;
@@ -272,6 +323,9 @@
     width: 100%;
     justify-content: space-between;
   }
+  .height-100{
+    min-height: 100%;
+  }
 
 }
 
@@ -286,4 +340,100 @@
   .cftf-table-align{
     text-align: left;
   }
+}
+
+.cft-form-list-paginate{
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+  padding: 0px;
+}
+.cft-user-select{
+  width: 90%;
+  border: none;
+  background: none;
+  padding: 0;
+  height: none;
+  color: #1a5a96;
+  font-family: Nunito Sans, SemiBold;
+  font-weight: 700;
+  font-size: 16px;
+}
+.cft-user-close{
+  position: relative;
+  color: #1a5a96;
+  font-family: Nunito Sans, SemiBold;
+  font-weight: bold;
+}
+.cft-person-fill{
+  padding-right: 3px;
+}
+.cft-user-span {
+  position: absolute;
+  width: 61%;
+}
+.custom-select {
+  height: auto;
+  vertical-align: top;
+
+}
+.custom-select:focus{
+  border-color: none !important;
+  box-shadow: none;
+}
+.cft-priority[data-title]:hover:after,
+.cft-task-assignee[data-title]:hover:after,
+.cft-groups[data-title]:hover:after,
+.cft-task-assignee[data-title]:hover:after,
+.cft-process-name[data-title]:hover:after,
+.task-header-title[data-title]:hover:after,
+.cft-application-id[data-title]:hover:after {
+  font-size: 12px;
+  content: attr(data-title);
+  padding: 4px 8px;
+  color: rgb(255, 255, 255);
+  position: absolute;
+  background-color: rgb(0, 0, 0);
+  right: 3rem;
+  top: 100%;
+  white-space: nowrap;
+  z-index: 1;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -moz-box-shadow: 0px 0px 4px #222;
+  -webkit-box-shadow: 0px 0px 4px #222;
+  box-shadow: 0px 0px 4px #222;
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #eeeeee),color-stop(1, #cccccc));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
+}
+.cft-process-name[data-title]:hover:after,.task-header-title[data-title]:hover:after,
+.cft-application-id[data-title]:hover:after{
+  right: 0;
+  position: relative;
+}
+.cft-application-id{
+  display: block;
+  height: auto;
+}
+.task-name{
+  height: 20px;
+}
+.task-header-title{
+  height: 30px;
+}
+.cft-groups[data-title]:hover:after
+{
+ 
+  width: 20%;
+  left: 0rem;
+  font-weight: 400;
+  font-size: 16px;
+}
+.cft-task-assignee[data-title]:hover:after {
+  width: 40%;
 }
