--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -225,12 +225,12 @@
   }
   [aria-busy=true] {
     cursor: unset !important;
-}
-.cft-paginate{
-    display: flex;
-    justify-content: center;
-    margin-top: 15px;
-}
+  }
+  .cft-paginate{
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+  }
 
   #cftf-dpdown-container {
     display: flex;
@@ -323,6 +323,40 @@
     width: 100%;
     justify-content: space-between;
   }
+  .height-100{
+    min-height: 100%;
+  }
+
+  // .cft-user-select{
+  //   width: 90%;
+  //   border: none;
+  //   background: none;
+  //   padding: 0;
+  //   height: none;
+  //   color: #1a5a96;
+  //   font-family: Nunito Sans, SemiBold;
+  //   font-weight: 700;
+  //   font-size: 16px;
+  // }
+  .cft-user-close{
+    position: relative;
+    color: #1a5a96;
+    font-family: Nunito Sans, SemiBold;
+    font-weight: bold;
+  }
+  .cft-person-fill{
+    padding-right: 3px;
+  }
+  .cft-user-span {
+    position: absolute;
+    // width: 61%;
+  }
+  .custom-select {
+    height: auto;
+    vertical-align: top;
+    width: 80% !important;
+  
+  }
 
 }
 
@@ -345,35 +379,7 @@
   margin-top: 15px;
   padding: 0px;
 }
-.cft-user-select{
-  width: 90%;
-  border: none;
-  background: none;
-  padding: 0;
-  height: none;
-  color: #1a5a96;
-  font-family: Nunito Sans, SemiBold;
-  font-weight: 700;
-  font-size: 16px;
-}
-.cft-user-close{
-  position: relative;
-  color: #1a5a96;
-  font-family: Nunito Sans, SemiBold;
-  font-weight: bold;
-}
-.cft-person-fill{
-  padding-right: 3px;
-}
-.cft-user-span {
-  position: absolute;
-  width: 61%;
-}
-.custom-select {
-  height: auto;
-  vertical-align: top;
 
-}
 .custom-select:focus{
   border-color: none !important;
   box-shadow: none;
