--- a/src/camundaFormIOTaslistSearch.scss
+++ b/src/camundaFormIOTaslistSearch.scss
@@ -1,4 +1,14 @@
 .cft-input-search-filter{
+
+    .cft-filter-container{
+        border: 1px solid #555;
+        border-radius: 3px;
+        width: 100%;
+        padding: 0;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        font-size: 13px;
+    }
     
     .cft-approve-box,.cft-reject-box{
         background-color: white;
