--- a/src/camundaFormIOFormList.scss
+++ b/src/camundaFormIOFormList.scss
@@ -1,5 +1,14 @@
 .cftf-form-conatiner{
     background-color: white;
+    text-align: left;
+    font-size: 16px;
+    
+    .bg-default {
+      background-color: #38598a !important;
+      border: #38598a !important;
+      color: white !important;
+    }
+
     .cft-form-list-paginate{
       display: flex;
       justify-content: center;
@@ -10,4 +19,13 @@
 
 .cft-form-submission {
   background-color: white;
+  text-align: left;
+  font-size: 16px;
+  font-family: Nunito Sans, SemiBold;
+
+  .bg-default {
+    background-color: #38598a !important;
+    border: #38598a !important;
+    color: white !important;
+  }
 }
