--- a/src/camundaFormIOTaslistSearch.scss
+++ b/src/camundaFormIOTaslistSearch.scss
@@ -28,5 +28,9 @@
         margin-bottom: 0rem;
         display: inline-block;
     }
+    .cft-operator-dropdown{
+      width: 15%;
+      background-color: white;
+    }
 
 }
