--- a/src/camundaFormIOFormList.scss
+++ b/src/camundaFormIOFormList.scss
@@ -15,6 +15,13 @@
       margin-top: 15px;
     }
 
+    .cft-not-selected{
+      border: 3px solid #b3b3b3;
+      padding: 10px;
+      color: #b3b3b3;
+      width: 100%;
+    }
+
 }
 
 .cft-form-submission {
