--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -19,7 +19,7 @@
   }
 
   .cft-filter{
-    width: 70%;
+    width:90%;
     margin: 5px;
     border: none;
     font-style: italic;
@@ -378,8 +378,8 @@
   height: 20px;
 }
 .task-header-title{
-  height: 30px;
-  width: 50%;
+  // height: 30px;
+  // width: 50%;
 }
 .cft-groups[data-title]:hover:after
 {
