--- a/src/camundaFormIOTasklist.scss
+++ b/src/camundaFormIOTasklist.scss
@@ -49,10 +49,10 @@
 
   .cft-service-task-details {
     min-height: 80vh;
-    max-height: 80vh;
+    // max-height: 80vh;
     overflow-y: auto;
     overflow-x: hidden;
-    height: 100%;
+    // height: 100%;
   }
 
   .task-header {
