--- a/src/styles/camundaFormIOTasklist.scss
+++ b/src/styles/camundaFormIOTasklist.scss
@@ -100,6 +100,8 @@
     font-weight: 500;
     font-size: 16px;
     text-align: right;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .cft-filter-dropbtn 
