--- a/src/styles/camundaFormIOTaslistSearch.scss
+++ b/src/styles/camundaFormIOTaslistSearch.scss
@@ -29,8 +29,12 @@
         display: inline-block;
     }
     .cft-operator-dropdown{
+      z-index: 10;
       width: 15%;
       background-color: white;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      border: 1px solid #949494;
+      position: absolute;
     }
 
 }
