--- a/src/styles/camundaFormIOTaslistSearch.scss
+++ b/src/styles/camundaFormIOTaslistSearch.scss
@@ -24,9 +24,11 @@
         width: 46.5%;
         display: inline-block;
     }
-    .cft-search-title{
+    .cft-search-operator{
         margin-bottom: 0rem;
         display: inline-block;
+        padding-left: 20px;
+        padding-right: 10px;
     }
     .cft-operator-dropdown{
       z-index: 10;
@@ -40,6 +42,10 @@
     .cftf-search-item-box {
         font-size: 16px;
         font-weight: 400;
+    }
+
+    .cftf-search-title {
+        padding: 10px;
     }
 
 }
