remove scrolling issues

--- a/src/styles/camundaFormIOTasklist.scss
+++ b/src/styles/camundaFormIOTasklist.scss
@@ -48,7 +48,7 @@
   .cft-service-task-details {
     min-height: 80vh;
     // max-height: 80vh;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     // height: 100%;
   }
