Fix/component issues (#60)
* rename Components to pascal case

* save axios in services folder

* call an array to update options dynamically

* rename select searchquery

* rename searchA variable

* show tasklist operators status properly

* make operator update reactive

* minimum styles for operator overlay

* update styles of search

* update styles

* Package json

* history

* history

* import fix

* import fix

* import fix

* import fix

* initial readme

* FormViewSubmission.vue

* cleaned

* change imports and in header file

* change imports of left-side Tasklist component

* remove unused props and variables

* Update TaskList.vue

* update files

* change query type methods

* create a new method for and Or queries

* fix bug in calling tasklist search with query list

* rename variables used

* add variable value in the list

* update header component

* Update TaskList.vue

* update input element

* update packages

* update Tasklist search components

* remove unused variables and functions in left-sider.vue

* reset to original intendatiton

* removed unwanted local storage

* removed localStorage.setItem(bpmSocketUrl,

* Task Search functionality

* update Tasklist

* date functionality of TaskList search component

* fix style issues for Date search functionality

* add operator change value bug fix

* style changes

* update constants and styles

* refactor TasklistSearch codebase

* remove unwanted code in tasklist

* remove scrolling issues

* revert delete duplicate code in Tasklist

* Update TaskList.vue

* pagination and style debug

* pagination temporary fix

* update TaskList components

* fix pagination bug

* remove unused variables in Header

* clean up codebase

* update TaskList search component

* Update format-time.ts

* fix bugs in tasklist component

* clean unused imports

* Update TaskListSearch.vue

* u

--- a/src/styles/camundaFormIOTaslistSearch.scss
+++ b/src/styles/camundaFormIOTaslistSearch.scss
@@ -9,28 +9,84 @@
         margin-bottom: 0.5rem;
         font-size: 13px;
     }
+
+    .cft-filter{
+        width:90%;
+        margin: 5px;
+        border: none;
+        font-style: italic;
+    }
+    
     
     .cft-approve-box,.cft-reject-box{
         background-color: white;
         border: 1px solid rgb(165, 163, 163);
         height: 8px;
         width: 8px;
+        cursor: pointer;
+        color: #212529;
         }
     .cft-icon-actions{
         display: block;
         float: right;
     }
     .cft-rhs-container{
-        width: 46.5%;
+        // width: 46.5%;
         display: inline-block;
     }
-    .cft-search-title{
+    .cft-search-operator{
         margin-bottom: 0rem;
         display: inline-block;
+        padding-left: 35px;
+        padding-right: 15px;
+        cursor: pointer;
     }
     .cft-operator-dropdown{
+      z-index: 10;
       width: 15%;
       background-color: white;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      border: 1px solid #949494;
+      position: absolute;
     }
 
+    .cftf-search-item-box {
+        font-size: 16px;
+        font-weight: 400;
+        color: #155cb5;
+        // cursor: pointer;
+    }
+
+    .cftf-search-title {
+        padding-left: 10px;
+        cursor: pointer;
+    }
+
+    .cftf-x {
+        padding-left: 4px;
+        cursor: pointer;
+    }
+
+    .cft-variable-box {
+        margin-left: 3.5px;
+        padding-left: 53px;
+        cursor: pointer;
+    }
+
+    .cft-search-variable-input {
+        padding-right: 50px;
+        cursor: pointer;
+    }
+
+    .cft-name-value-container {
+        font-size: 14px;
+        font-weight: 500;
+        margin-left: 5px;
+        display: block;
+        color: #0d0d0e;
+    }
+
+    .cft-search-cursor {
+        cursor: pointer;
+    }
 }
