--- a/src/styles/camundaFormIOTasklist.scss
+++ b/src/styles/camundaFormIOTasklist.scss
@@ -98,7 +98,7 @@
     font-weight: 500;
     font-size: 16px;
     text-align: right;
-    display: flex;
+    // display: flex;
     justify-content: flex-end;
   }
 
