--- a/src/styles/camundaFormIOTasklist.scss
+++ b/src/styles/camundaFormIOTasklist.scss
@@ -4,6 +4,7 @@
   text-align: left;
   font-size: 16px;
   font-family: Nunito Sans, SemiBold;
+  overflow-y: hidden;
   
   .bg-default {
     background-color: #38598a !important;
