--- a/src/styles/camundaFormIOTasklistSearch.scss
+++ b/src/styles/camundaFormIOTasklistSearch.scss
@@ -103,4 +103,17 @@
         padding: 5px;
         width: 13rem;
     }
+    
+    .cft-search-item-nav {
+        background-color: #fff;
+        color: #212529;
+        // font-style: italic;
+        font-weight: 400;
+        text-align: left;
+        font-size: 16px;
+
+        .span {
+            color: black;
+        }
+    }
 }
