create new component for Tasklist search type

--- a/src/styles/camundaFormIOTasklistSearch.scss
+++ b/src/styles/camundaFormIOTasklistSearch.scss
@@ -33,6 +33,7 @@
     .cft-rhs-container{
         // width: 46.5%;
         display: inline-block;
+        padding-left: 35px;
     }
     .cft-search-operator{
         margin-bottom: 0rem;
