--- a/src/styles/camundaFormIOTasklist.scss
+++ b/src/styles/camundaFormIOTasklist.scss
@@ -331,7 +331,6 @@
 .cft-task-assignee[data-title]:hover:after,
 .cft-process-name[data-title]:hover:after,
 .task-header-title[data-title]:hover:after,
-.cft-application-id[data-title]:hover:after,
 .cft-due-date[data-title]:hover:after,
 .cft-remove-user[data-title]:hover:after {
   font-size: 12px;
@@ -357,12 +356,12 @@
   background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
   background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 }
-.cft-process-name[data-title]:hover:after,.task-header-title[data-title]:hover:after,
-.cft-application-id[data-title]:hover:after{
-  right: 0;
-  position: relative;
-  height: 26px;
-}
+// .cft-process-name[data-title]:hover:after,.task-header-title[data-title]:hover:after,
+// .cft-application-id[data-title]:hover:after{
+//   right: 0;
+//   position: relative;
+//   height: 26px;
+// }
 .cft-application-id{
   display: block;
   height: auto;
@@ -374,7 +373,7 @@
 .cft-groups[data-title]:hover:after
 {
  
-  width: 20%;
+  width: 25%;
   left: 0rem;
   font-weight: 400;
   font-size: 16px;
