add formsflow.ai image in readme

--- a/src/styles/camundaFormIOTasklistSearch.scss
+++ b/src/styles/camundaFormIOTasklistSearch.scss
@@ -34,6 +34,7 @@
         // width: 46.5%;
         display: inline-block;
         padding-left: 35px;
+        cursor: pointer;
     }
     .cft-search-operator{
         margin-bottom: 0rem;
