--- a/src/styles/camundaFormIOTasklistSearch.scss
+++ b/src/styles/camundaFormIOTasklistSearch.scss
@@ -1,4 +1,4 @@
-.cft-input-search-filter{
+.cft-input-search-filter {
 
     .cft-filter-container{
         border: 1px solid #555;
@@ -33,6 +33,8 @@
     .cft-rhs-container{
         // width: 46.5%;
         display: inline-block;
+        padding-left: 35px;
+        cursor: pointer;
     }
     .cft-search-operator{
         margin-bottom: 0rem;
@@ -102,5 +104,12 @@
         z-index: 2;
         padding: 5px;
         width: 13rem;
+    }
+    
+    .cft-search-item-nav {
+        background-color: #fff;
+        font-weight: 400;
+        text-align: left;
+        font-size: 16px;
     }
 }
